--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ html, body {
     padding: 30px;
     border-radius: 10px;
     margin-bottom: 20px;
-    width: 80%;
-    max-width: 600px;
+    width: 100%;
+    max-width: 800px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
@@ -103,6 +103,11 @@ html, body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 h1 {
+    margin-bottom: 20px;
+    font-weight: 700;
+    color: #0c5978;
+}
+h2{
     margin-bottom: 20px;
     font-weight: 700;
     color: #0c5978;
@@ -142,6 +147,11 @@ button {
     font-size: 16px;
     transition: background-color 0.3s ease;
 }
+ center-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 button:hover {
     background: #0c5978;
@@ -172,10 +182,12 @@ table {
 th, td { 
     border: 1px solid #ddd; 
     padding: 8px; 
-    text-align: left; 
+    text-align: center; 
+    vertical-align: middle;
 }
 th { 
-    background-color: #f2f2f2; 
+    background-color: #f2f2f2;
+    text-align: center; 
 }
 .form-group label { 
     display: block; 
@@ -186,9 +198,7 @@ th {
     padding: 8px; 
     box-sizing: border-box; 
 }
-.insured-button:hover {
-    background: #4430f7;
-}
+
 button { 
     padding: 10px 15px; 
     margin-top: 10px; 
